test/valid/get-length.js
function getLength(x) {
    return x.length;
}

var n = getLength('hi');

n;
