test/invalid/bug2.js
var x = function (a) { return a; };
x = function (a) { return false; };
x;
x('a');
